am adaugat o lista numerotata

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 <h2>text333</h2>
 
 <div class="patrat">
-    
+    <div class="copil">
+        <div class="nepot">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+    </div>
 </div>
+<ol>
+    <li>apa</li>
+    <li>soc</li>
+    <li>paine</li>
+</ol>
+
 
 </body>
 </html>
